--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background:black;
+    background: #333 url(../img/bg.jpg) repeat top left;
     font: 12px/14px sans-serif;
     color:white;
 }
@@ -19,33 +19,45 @@ nav{
     text-align:center;
     margin-top: 40px;
 }
-nav span {
-    padding-right:2em;
+.navigation span {
+    color: transparent;
+    display: block;
+    text-transform: uppercase;
+    text-shadow: 0px 0px 7px #fff;
+    letter-spacing: 1px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    font:3em Arial;
+    margin-right:3px;
     cursor:pointer;
-    padding: 20px;
 }
 
+.navigation:hover span{
+    text-shadow: 0px 0px 5px #0d1a3a;
+}
 .navigation li{
     display:inline-block;
 }
 
 .navigation li span.selected{
-    background-color: #ff8c00;
-    border-radius:10px;
-    font-weight:bold;
-    text-shadow:0px 0px 5px;
+    color: #fff;
+    text-shadow: 0px 0px 1px #fff;
+    padding-left: 10px;
 }
 
 .navigation li span:hover{
-    background-color: rgba(254,140,0,0.5);
-    border-radius:10px;
-    text-shadow:0px 0px 5px;
+    color: #fff;
+    text-shadow: 0px 0px 1px #fff;
+    padding-left: 10px;
 }
 
 /* container */
 div.container{
     height:400px;
-    background-color:#8c898c;
+    background-color:rgba(219,219,219,0.2);
     position:relative;
     border-radius:10px;
     padding: 1em 3em;
@@ -69,41 +81,45 @@ div.container div{
 }
 
 div.container div.opaque {
-  opacity:1;
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: alpha(opacity=1);
+    opacity:1;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=1);
 }
-/* footer */
 
+div.container div h1{
+    font-size:40px;
+    margin-bottom:10px;
+}
+
+
+/* footer */
 footer{
-    margin-top:20px;
-    background-color:#666666;
+    background-color:rgba(219,219,219,0.2);
+    padding:20px;
+    height:150px
 }
 
 footer section{
     width:200px;
-    border: 0px;
-    background-color:rgba(219,219,219, 0.2);
-    border-radius:5px;
-    margin:0px 20px;
-    padding:10px 5px;
-    -moz-box-shadow: 0px 5px 10px #dbdbdb;
-    -webkit-box-shadow: 0px 5px 10px #dbdbdb;
-    box-shadow: 0px 0px 10px #dbdbdb;
+    height:100%;
+    display:inline-table;
+    border-right:1px dotted #a9aaab;
+    padding:4px;
 }
 
 footer section h2{
     color:#a9aaab;
     font: 25px sans-serif;
-    margin-bottom:10px;
 }
 
 footer ul{
     list-style:none;
+    margin-top:10px;
+    padding-left:20px;
 }
 
 footer li{
-    padding:15px 5px 0px 5px;
+    padding:2px 0px;
 }
 
 footer a{
